<resources>

    <string name="app_name">Saved.io++</string>

    <string name="share_add_new_bookmark">Saved.io Add new bookmark</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <!-- Strings related to favorites widget -->
    <string name="title_widget_favorites">Saved.io++ Favorites</string>
    <string name="empty_favorites_list">No favorite bookmarks</string>

    <!-- Strings related to introduction activity -->
    <string name="intro_done_button">Ok</string>

    <string name="intro_warning_title">Hello!</string>
    <string name="intro_warning_msg">This app respects your privacy.
        It is free software (GPLv3) and its code is public. Feel free to check it on GitHub. \n\n
        In the current version there is a problem with the lists in online mode because Saved.io does
        not provide information about available lists. So if you have created a bookmark in a list
        from the web, it will appear as listless in the app.</string>
    <string name="intro_warning_apologies">Sorry :(</string>

    <string name="intro_instructions_title">Instructions</string>
    <string name="intro_instructions_offline_title">Offline</string>
    <string name="intro_instructions_offline_content">Just click OK and start using the app.</string>
    <string name="intro_instructions_online_title">Online</string>
    <string name="intro_instructions_web_register_button">Register</string>
    <string name="intro_instructions_web_api_button">Get User API Key</string>
    <string name="intro_instructions_web_button_unable_format" formatted="false">Unable to open %s</string>
    <string name="intro_instructions_settings_button">Set Up User API Key</string>

    <!-- Strings related to notifications -->
    <string name="notification_list_format_long" formatted="false">%s bookmark list has changes.</string>
    <string name="notification_list_format_short" formatted="false">%s list changes.</string>
    <string name="notification_several_lists_long">There are bookmark changes in some lists.</string>
    <string name="notification_several_lists_short">Bookmark lists changes.</string>

    <!-- Strings related to sync service -->
    <string name="sync_summary_format" formatted="false">%d removed, %d created and %d updated.</string>
    <string name="sync_api_error">User key is not valid</string>
    <string name="sync_network_error">There are network problems</string>
    <string name="sync_service_error">There are service problems</string>

    <!-- Strings related to Main activity -->
    <string name="main_nav_drawer_open">Open bookmark lists menu</string>
    <string name="main_nav_drawer_close">Close bookmark lists menu</string>
    <string name="main_menu_header_title">List</string>
    <string name="main_menu_all">All</string>
    <string name="main_menu_favorites">Favorites</string>
    <string name="main_content_favorites">@string/main_menu_favorites</string>
    <string name="main_bookmark_deleted">Bookmark deleted successfully</string>
    <string name="main_bookmark_deleted_error">There was an error deleting a bookmark</string>
    <string name="main_bookmark_deleted_undo">Undo</string>
    <string name="main_bookmark_deleted_undo_error">There was an error undoing the deletion of a bookmark</string>
    <string name="main_notify_bookmarks">Notify changes</string>
    <string name="main_bookmark_unable_click">Unable to open URL</string>
    <string name="main_bookmark_unable_click_search">Search</string>
    <string name="main_sync_result">Bookmark synchronization result:</string>
    <string name="main_dialog_search_ok">Search</string>
    <string name="main_dialog_search_title">Search</string>


    <!-- Strings related to bookmark form -->
    <string name="bookmark_form_title">Title</string>
    <string name="bookmark_form_url">URL</string>
    <string name="bookmark_form_notes">Notes</string>
    <string name="bookmark_form_list">List</string>
    <string name="bookmark_form_optional_hint">Optional</string>
    <string name="bookmark_form_dialog_add_list_ok">Add</string>
    <string name="bookmark_form_dialog_add_list_title">Add a new list</string>
    <string name="bookmark_form_dialog_select_list_title">Select list</string>
    <string name="bookmark_form_create_list_error_empty">List name must not be empty</string>
    <string name="bookmark_form_create_list_error_chars">List name must contains only alphabetic (a-z), numeric (0-9) and hyphens (-) characters</string>
    <string name="bookmark_form_create_list_error_hyphens">Hyphens (-) characters can only be in the middle of the word and there cannot be one followed by another</string>

    <!-- Strings related to edit bookmark activity -->
    <string name="edit_bookmark_button">Edit</string>
    <string name="edit_bookmark_error">There was an error editing a bookmark</string>

    <!-- Strings related to new bookmark activity -->
    <string name="new_bookmark_button">Save</string>
    <string name="new_bookmark_error">There was an error creating a bookmark</string>

    <!-- Strings related to Settings -->

    <!-- Import/Export settings -->
    <string name="pref_import_title">Import</string>
    <string name="pref_import_summary">Import bookmarks from an exported file</string>
    <string name="pref_import_summary_unavailable">This feature is not available (Android KitKat or higher version is required)</string>
    <string name="pref_import_key" translatable="false">import</string>
    <string name="pref_export_title">Export</string>
    <string name="pref_export_summary">Export bookmarks to a file</string>
    <string name="pref_export_summary_unavailable">This feature is not available (Android KitKat or higher version is required)</string>
    <string name="pref_export_key" translatable="false">export</string>
    <!-- Import/Export messages -->
    <string name="serialize_json_error">There was an error serializing a bookmark. </string>
    <string name="deserialize_json_error">There was an error deserializing a bookmark. </string>
    <string name="deserialize_json_array_error">There was an error deserializing bookmarks. </string>
    <string name="serialize_empty_error">There is no bookmarks to store. </string>
    <string name="deserialize_empty_error">There is no stored bookmarks. </string>
    <string name="serialize_error">There was an error serializing bookmarks. </string>
    <string name="file_error">There was an error selecting file. </string>
    <string name="export_error_format">There was an error exporting bookmarks. %s</string>
    <string name="export_success">Bookmarks exported successfully. </string>
    <string name="export_error_writing">There was an error writing file. </string>
    <string name="import_error_format">There was an error importing bookmarks. %s</string>
    <string name="import_error_empty">The file is empty. </string>
    <string name="import_error_reading">There was an error reading file. </string>
    <string name="import_success">All bookmarks imported successfully. </string>
    <string name="import_success_incomplete">Bookmarks imported successfully (some bookmarks could not be imported). </string>

    <!-- Sort settings -->
    <string name="pref_sort_label">Sort by</string>
    <string name="pref_sort_key" translatable="false">sort</string>

    <string name="pref_sort_date_last_label">Date (new to old)</string>
    <string name="pref_sort_date_last_key" translatable="false">sort-date-last</string>
    <string name="pref_sort_date_old_label">Date (old to new)</string>
    <string name="pref_sort_date_old_key" translatable="false">sort-date-old</string>
    <string name="pref_sort_title_label">Title</string>
    <string name="pref_sort_title_key" translatable="false">sort-title</string>
    <string name="pref_sort_default" translatable="false">@string/pref_sort_date_last_key</string>

    <string-array name="pref_sort_values_key">
        <item>@string/pref_sort_date_last_key</item>
        <item>@string/pref_sort_date_old_key</item>
        <item>@string/pref_sort_title_key</item>
    </string-array>

    <string-array name="pref_sort_values_label">
        <item>@string/pref_sort_date_last_label</item>
        <item>@string/pref_sort_date_old_label</item>
        <item>@string/pref_sort_title_label</item>
    </string-array>

    <!-- User API key settings -->
    <string name="pref_api_label">User API key</string>
    <string name="pref_api_key" translatable="false">user-api-key</string>
    <string name="pref_api_default" translatable="false"></string>
    <string name="pref_api_warning">Set an empty key to work offline. The synchronization process could remove current bookmarks.</string>

    <!-- Smart favorites settings -->
    <string name="pref_smart_label">Smart favorites</string>
    <string name="pref_smart_key" translatable="false">smart-favorites</string>
    <string name="pref_smart_sum_on">The ten most used bookmarks will be automatically marked as favorites. This action will delete the current favorites.</string>
    <string name="pref_smart_sum_off">Select favorites by clicking on the icon. This action will delete the current favorites.</string>

</resources>
