<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            style="@style/header1IntroText"
            android:text="@string/intro_instructions_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            style="@style/header2IntroText"
            android:text="@string/intro_instructions_offline_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            style="@style/introText"
            android:text="@string/intro_instructions_offline_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            style="@style/header2IntroText"
            android:text="@string/intro_instructions_online_title" />

        <Button
            android:id="@+id/bt_intro_web_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            style="@style/instructionText"
            android:text="@string/intro_instructions_web_register_button"/>

        <Button
            android:id="@+id/bt_intro_web_api"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            style="@style/instructionText"
            android:text="@string/intro_instructions_web_api_button"/>

        <Button
            android:id="@+id/bt_intro_set_api"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/intro_instructions_settings_button"
            style="@style/instructionText"
            android:layout_marginBottom="60dp"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>