<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/intro_warning_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/intro_warning_msg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/intro_warning_apologies"
            android:layout_marginBottom="60dp"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>